# recepti

./: .aider.chat.history.md  .aider.input.history  .gitignore  IMPLEMENTATION_PLAN.md  PLAN.md  PROJECT.md  README.md  check-status.sh  code-async.sh  gen_recipes.py  generate_recipes.py  init-env.sh  pyproject.toml  requirements.txt  start_orchestra.sh  translate_batch.py  wsgi.py
data/: croatia_ingredients.json  croatian_recipes.json  expanded_recipes.json  family.json  meal_history.json  recipes.json  request.json
deploy/: README.md  start.sh  stop.sh
orchestra/: __init__.py  __main__.py  brain_chat.py  coder_worker.py  config.py  llm_client.py  memory.py  run.py  task_queue.py  undo_journal.py
recepti/: __init__.py  bot.py  cooking_log.py  cuisine_blacklister.py  family_nutrient_balancer.py  grocery.py  grocery_store.py  grocery_suggester.py  hunt_notification.py  kid_tracker.py  llm_service.py  meal_parser.py  meal_state.py  models.py  nutrition.py  planner.py  rating_store.py  recipe_expander.py  recipe_hunter.py  recipe_store.py  scheduler.py  scraper.py  search.py  shopping.py  verification_formatter.py  web_app.py
static/: coverage.html  index.html  nutrients.html  recipes.html  scrape-todo.html
tests/: conftest.py  test_cooking_log.py  test_croatian_recipes.py  test_cuisine_blacklister.py  test_e2e.py  test_e2e_plan.md  test_family_nutrient_balancer.py  test_grocery_suggester.py  test_hunt_notification.py  test_kid_tracker.py  test_kuhano_command.py  test_llm_service.py  test_meal_parser.py  test_meal_state.py  test_models.py  test_nutrition.py  (+11 more)
(+9 files in other folders)
